After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 746749 - GLib-GIO:ERROR:inotify-kernel.c:327:ik_source_dispatch: assertion failed: ((iks->queue.length > 0) == (g_hash_table_size (iks->unmatched_moves) > 0))
GLib-GIO:ERROR:inotify-kernel.c:327:ik_source_dispatch: assertion failed: ((i...
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2015-03-25 14:36 UTC by Carlos Soriano
Modified: 2015-03-26 18:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
bt full (2.94 KB, text/plain)
2015-03-25 14:36 UTC, Carlos Soriano
  Details
inotify: fix move event matching accounting (1.10 KB, patch)
2015-03-26 18:51 UTC, Allison Karlitskaya (desrt)
committed Details | Review

Description Carlos Soriano 2015-03-25 14:36:29 UTC
Created attachment 300283 [details]
bt full

Seems latest glib work on monitors breaks. An easy way to test it out is on nautilus trying to move a folder to a gtkplacesidebar bookmark.

backtrace attached
Comment 1 Allison Karlitskaya (desrt) 2015-03-26 18:51:31 UTC
Created attachment 300385 [details] [review]
inotify: fix move event matching accounting

The hash table stores the list of unmatched IN_MOVE_FROM events, but we
were removing entries from it when popping IN_MOVE_TO events.

Fix that up to correct a crash in nautilus due to the assertion failure
below.
Comment 2 Matthias Clasen 2015-03-26 18:56:34 UTC
Review of attachment 300385 [details] [review]:

Looks right, from a quick look
Comment 3 Allison Karlitskaya (desrt) 2015-03-26 18:56:56 UTC
Attachment 300385 [details] pushed as fd40b59 - inotify: fix move event matching accounting